@@ -1,5 +1,7 @@
 			wxFormBuilder ChangeLog
 ************************************************************************
+* FS#288 - [OS X] Splash screen is truncated
+
 12/14/2007 Version 3.00.51 (RC4)
 ^ No longer creating a temporary file on disk for the XRC Preview.
 * FS#247 - "Invalid macro generated by wxFB."
